# riks-samples

./: default.config
mqtt/: download.py
mqtt/android/: .gitignore  Readme.md  build.gradle  build.sh
mqtt/android/src/main/: AndroidManifest.xml
mqtt/android/src/main/java/demo/: MainActivity.java  RiksMQTTClient.java
mqtt/android/src/main/java/io/hyker/riks/samples/mqtt/android/: MainActivity.java  RiksMQTTClient.java
mqtt/android/src/main/resources/layout/: activity_main.xml
mqtt/android/src/main/resources/values/: strings.xml
mqtt/cpp/: .gitignore  CMakeLists.txt  README.md  build.sh  download.py  download.sh
mqtt/cpp/src/: main.cpp  mqtt_client.cpp  mqtt_client.hpp  mqtt_server.cpp  mqtt_server.hpp  riks_mqtt_client.cpp  riks_mqtt_client.hpp
mqtt/csharp/: Riks.Samples.MQTTClient.csproj
mqtt/csharp/src/: RiksMQTTClient.cs
mqtt/java/: build.gradle  build.sh
mqtt/java/src/: Main.java  RiksMQTTClient.java
mqtt/net/: Readme.md  Riks.Samples.MQTTClient.csproj  build.bat
mqtt/net/src/: RiksMQTTClient.cs  RiksSamplesMQTTClientMain.cs
mqtt/node/: main.js  package-lock.json  package.json  riks-mqtt-client.js
mqtt/swift/: .gitignore  Podfile  build.sh
mqtt/swift/RiksSamplesMQTTSwift/: RiksMQTTClient.swift  main.swift
mqtt/swift/RiksSamplesMQTTSwift.xcodeproj/: project.pbxproj
mqtt/swift/src/: RiksMQTTClient.swift  main.swift
